Adds password changing

--- a/seniority_visualizer_app/templates/users/detail.html
+++ b/seniority_visualizer_app/templates/users/detail.html
@@ -25,6 +25,8 @@
             </div>
             <button class="btn-primary btn-block" type="submit">Submit</button>
             <button class="btn-block btn-info" id="uiEditButton" type="button">Edit</button>
+
+            <a href="{{ url_for('user.change_password') }}">Change Password</a>
         </form>
     </div>
 
