Testing for password management

--- a/seniority_visualizer_app/templates/mail/reset_password.html
+++ b/seniority_visualizer_app/templates/mail/reset_password.html
@@ -8,7 +8,7 @@
         one hour. If it expires before you have a chance to change your password, you
         can simply request a new one with the same "forgot password" link.
     </p>
-    <a href="{{ url }}">Click here to reset password</a>
+    <a id="passwordResetLink" href="{{ url }}">Click here to reset password</a>
     <small>
         This message was sent automatically. If you did not request a password reset,
         you may simply ignore this message. Thank you.
