--- a/seniority_visualizer_app/templates/users/forgot_password.html
+++ b/seniority_visualizer_app/templates/users/forgot_password.html
@@ -9,7 +9,7 @@
 
     <h3 class="mt-3">Request Password Reset</h3>
 
-        <form class="mt-3" method="POST">
+        <form id="forgotPasswordForm" class="mt-3" method="POST">
 
             {{ password_reset_form.csrf_token }}
 
