--- a/seniority_visualizer_app/templates/users/password_reset.html
+++ b/seniority_visualizer_app/templates/users/password_reset.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <form method="POST">
+    <form id="passwordResetForm" method="POST">
         {{ password_form.csrf_token }}
         {{ password_form.new_password.label }}
         {{ password_form.new_password() }}
