--- a/seniority_visualizer_app/templates/layout.html
+++ b/seniority_visualizer_app/templates/layout.html
@@ -24,6 +24,8 @@
 
   {% block css %}{% endblock %}
 
+  {% block cdn_resources %}{% endblock %}
+
 </head>
 <body class="{% block body_class %}{% endblock %}">
 {% block body %}
@@ -49,7 +51,9 @@
 {% endif %}
 {% endwith %}
 
-{% block content %}{% endblock %}
+<div class="container">
+    {% block content -%}{%- endblock %}
+</div>
 </main>
 
 
