--- a/seniority_visualizer_app/templates/seniority/current_status.html
+++ b/seniority_visualizer_app/templates/seniority/current_status.html
@@ -1,11 +1,36 @@
 {% extends "layout.html" %}
+{% from "seniority/_pilot_info.html" import render as pilot_render with context %}
 
-{% block page_title %}
-Seniorty List Status
+{% block page_title %}Seniorty List Status{% endblock %}
+
+{% block css %}
+    <style>#blurb {color: red;}</style>
 {% endblock %}
 
 {% block content %}
 
-{{ report.title }}
+    {% if error is none %}
+        <div class="m-auto border container">
+            <h5>Current Seniority List Status</h5>
+            <small id="blurb">
+                Please note that this information may not be entirely up to date. Pilots come and go,
+                and this information merely represents a snapshot of the current pilot group, exactly as it
+                was published on <span id="valid-date">{{ report.valid_date|datetime }}</span>. I am unable to keep up with all of the
+                changes to the seniority list in real time, but am updating the data as quickly as it becomes
+                available.
+            </small>
+            <br>
+            <div id="current-status" class="mt-3">
+                <p>Total Pilots: {{ report.total_pilots }}</p>
+                <p>Published Date: {{ report.valid_date|datetime("date") }}</p>
+                <p>Retired Since Published: {{ report.total_retired }}</p>
+                <p>Latest Retirement: {{ report.span.latest_retire|datetime("date") }}</p>
+            </div>
+        </div>
+    {% else %}
+        <div id="error">
+            <h5 class="warning">{{ error }}</h5>
+        </div>
+    {% endif %}
 
 {% endblock %}
