--- a/seniority_visualizer_app/templates/seniority/base_plot.html
+++ b/seniority_visualizer_app/templates/seniority/base_plot.html
@@ -6,11 +6,16 @@
 
     {% if not errors %}
 
-    <div class="container">
+    <div class="container justify-content-lg-center">
         <div class="bokeh-plot">
             {{ script | safe }}
             {{ div | safe }}
         </div>
+        {% if description %}
+            <div id="plot-description">
+                {{ description|safe }}
+            </div>
+        {% endif %}
     </div>
 
     {% endif %}
