Add pilot trajectory plots

--- a/seniority_visualizer_app/templates/seniority/current_status.html
+++ b/seniority_visualizer_app/templates/seniority/current_status.html
@@ -35,7 +35,14 @@
             <div class="row">
                 <div class="col-lg p-3">
                     <a class="btn btn-primary" href="{{ url_for(".plot_retirements") }}" role="button">
-                        Retirement Rates
+                        Retirement Rates Over Time
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg p-3">
+                    <a href="{{ url_for(".build_pilot_plot") }}" class="btn btn-primary">
+                        Pilot's Seniority Over Career
                     </a>
                 </div>
             </div>
