Add note for mobile users

--- a/seniority_visualizer_app/templates/seniority/base_plot.html
+++ b/seniority_visualizer_app/templates/seniority/base_plot.html
@@ -11,6 +11,12 @@
 {% endblock %}
 
 {% block content %}
+    <div>
+        <p class="text-muted" style="margin-top: 10px">
+            Mobile users may have a better experience if they turn off the<code>pan</code> tool on the right
+            hand side of the plot. This will allow for easier touching within the plot.
+        </p>
+    </div>
     <div class="container justify-content-lg-center">
         <div class="bokeh-plot">
             {{ script | safe }}
