--- a/seniority_visualizer_app/templates/nav.html
+++ b/seniority_visualizer_app/templates/nav.html
@@ -49,7 +49,7 @@
             </form>
             <ul class="navbar-nav my-auto">
                 <li class="nav-item">
-                    <a class="nav-link navbar-text" href="{{ url_for('public.register') }}">Create account</a>
+                    <a class="nav-link navbar-text" href="{{ url_for('public.request_company_verification') }}">Create account</a>
                 </li>
                 <li class="nav-item">
                     <a href="{{ url_for("user.forgot_password") }}" class="nav-link navbar-text">Forgot Password</a>
