--- a/seniority_visualizer_app/templates/public/about.html
+++ b/seniority_visualizer_app/templates/public/about.html
@@ -1,11 +1,22 @@
-
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="container">
     <h1 class="mt-5">About</h1>
-    <div class="row">
-      <p class="lead">This template was created by <a href="http://github.com/sloria/">Steven Loria</a> for use with the <a href="http://github.com/audreyr/cookiecutter/">cookiecutter</a> package by <a href="http://github.com/audreyr/">Audrey Roy</a>.</p>
-    </div>
-</div>
+    <p>
+        This is pet project of mine I started in late 2019. I hurt my back and was off the line for a few months, so
+        I picked up a few programming languages and threw together a few scripts for my own use that kept track of
+        some fancy seniority stuff. But, I wanted to learn web development so I could deploy them as something useful,
+        and this is the result of that venture. I will continuously be adding features and new data views to the
+        project as I continue with it.
+    </p>
+
+    <p>
+        If you know Python, Pandas, Flask, JavaScript, I'd be happy to take a look at any pull requests you may have.
+        Even if you don't, please feel free to message me about any bugs or features you'd like to see implemented.
+    </p>
+
+    <a style="font-size: xx-large" href="https://github.com/AirbusDriver/SeniorityVisualizer">
+        Checkout the repo here <i class="fa fa-github-square fa-2x" alt="repo"></i>
+    </a>
+
 {% endblock %}
