Expand landing page introduction

--- a/seniority_visualizer_app/templates/public/home.html
+++ b/seniority_visualizer_app/templates/public/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+    
     <div class="jumbotron">
         <div class="container">
 
@@ -9,22 +9,24 @@
             <p>A pilot's one or more stop shop for visualizing seniority.</p>
 
         </div>
-    </div><!-- /.jumbotron -->
+    </div>
 
     <div class="container">
         <div class="row">
             <p>
-                This is a project that aims to revive what was lost when the company's implementation of a seniority
-                estimator
-                was lost several years ago. It can't, nor will it attempt, to provide advice about a pilot's career
+                This is a project aimed at reviving, and expanding upon, the old seniority calculator. 
+                It can't, nor will it attempt to, provide advice about a pilot's career
                 decisions.
-                However, it can give some insight as to how we are doing as a pilot group, and what your place in it
+                However, it can give some insight as to how we are doing as a pilot group, and how your place in it
                 could
                 look at any arbitrary point in time.
             </p>
             <p>
                 The information provided here is calculated under the assumption that each pilot will remain active on
-                the seniority list until reaching their retirement date (age 65 rule).
+                the seniority list until reaching their retirement date (age 65 rule). Some of the functionality may
+                be inherently limited if you are new to the company and have not been added to the most recent 
+                seniority list publication. However, some "quick and dirty" calculations and estimations are available
+                until a more accurate representation of your place in the list is available.
             </p>
         </div>
 
