--- a/seniority_visualizer_app/templates/public/company_verification.html
+++ b/seniority_visualizer_app/templates/public/company_verification.html
@@ -13,6 +13,9 @@
         stuff like password resets. Eventually, a mailing list will be created that you can opt into that will let
         you know when the latest seniority data has been pushed into the site.
     </p>
+    
+    <p><small>Be sure to check your spam folder since the mailer doesn't put out enough mail to gain a 
+    reputable status with most mailing systems!</small></p>
 
     <div class="form">
     {% with form=validation_form %}
